--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -25,6 +25,12 @@ ul li {
 
 .balance, .income-outcome, .transaction-history {
   margin: 20px 0;
+  font-size: 1.3em;
+}
+
+.balance, .income-outcome{
+  font-size: 2em;
+
 }
 
 .income {
@@ -43,6 +49,8 @@ form {
 input {
   margin-bottom: 10px;
   padding: 8px;
+  border-radius: 5px;
+  width: 100%;
 }
 
 button {
@@ -206,3 +214,78 @@ h1 {
   font-size: 1.1em;
 }
 
+/*//////////////////////////////////
+    Start of note app style
+//////////////////////////////////*/
+
+/* Styling card container */
+.card {
+	/* min-height: 50vh; */
+	height: fit-content;
+	min-width: 33rem;
+	max-width: 40rem;
+	background: rgba(147, 208, 119, 1);
+	margin: 0 1rem;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	width: 100%;
+}
+
+.head {
+	position: relative;
+	max-height: fit-content;
+	min-width: 33rem;
+	width: 100%;
+	background: rgb(109, 157, 87);
+
+	padding: 1rem;
+}
+
+
+/* Input box and button */
+.add {
+	padding: 5%;
+	text-align: left;
+	padding-left: 6%;
+	/* margin: 10%; */
+}
+
+#title {
+	width: 20%;
+	font-size: larger;
+}
+
+#description {
+	font-size: large;
+	width: 60%;
+}
+
+button {
+	border-radius: 5px;
+	padding: 5px;
+	font-size: large;
+	color: #dbeefa;
+	background-color: rgb(109, 157, 87);
+}
+
+/* style accordion */
+.notes {
+	margin: 5%;
+	text-align: left;
+}
+
+/* style for accordion items */
+.notes-item {
+	display: flex;
+	z-index: 100;
+	padding: 2%;
+	/* border-bottom: 1px solid #4e7b48; */
+	font-size: larger;
+	margin: 2%;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* style for accordion items */
+.accordion-item {
+	border-bottom: 1px solid #ddd;
+	font-size: larger;
+}
